--- a/WebApp/Web.config
+++ b/WebApp/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApp-20181117040352.mdf;Initial Catalog=aspnet-WebApp-20181117040352;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="connStr" connectionString="Data Source=LENOVO-PC;INITIAL CATALOG=NewSystem;user id=sa;password=660697"/>
+    <add name="connStr" connectionString="Data Source=DESKTOP-LNTUPNA;INITIAL CATALOG=NewSystem;user id=sa;password=660697"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
